[gd_scene load_steps=41 format=3 uid="uid://cogfsg7tm68nd"]

[ext_resource type="Script" path="res://main-menu.gd" id="1_m6ma2"]
[ext_resource type="Texture2D" uid="uid://cl1q3x2qvvjp" path="res://prototype-sprites/main-menu-background.png" id="2_kcjcb"]
[ext_resource type="Texture2D" uid="uid://bedndah7qmgb2" path="res://prototype-sprites/play-button-idle.png" id="3_jtrqy"]
[ext_resource type="Texture2D" uid="uid://0li1n0b6f8uo" path="res://prototype-sprites/play-button-pressed.png" id="4_0bmic"]
[ext_resource type="Texture2D" uid="uid://1f6mfrrdeysy" path="res://prototype-sprites/setting-button-idle.png" id="5_hbg1t"]
[ext_resource type="Texture2D" uid="uid://cgw48544qt70g" path="res://prototype-sprites/setting-button-pressed.png" id="6_2tiwg"]
[ext_resource type="Texture2D" uid="uid://h32lnbxistpa" path="res://prototype-sprites/about-button-idle.png" id="7_2y8fp"]
[ext_resource type="Texture2D" uid="uid://cp4kjo124or6p" path="res://prototype-sprites/about-button-pressed.png" id="8_21c1c"]
[ext_resource type="Texture2D" uid="uid://dhtb6mm8f4665" path="res://prototype-sprites/kabuto-cast-off.png" id="9_544ev"]
[ext_resource type="Texture2D" uid="uid://dyrbmguitfwma" path="res://prototype-sprites/kabuto-walk.png" id="9_ueyaj"]
[ext_resource type="FontFile" uid="uid://d2epuvtq0plau" path="res://ui/Minecraft.ttf" id="11_23lmf"]
[ext_resource type="FontFile" uid="uid://lsugdsdc0yx7" path="res://resources/Minecraft.ttf" id="12_jtdvs"]
[ext_resource type="PackedScene" uid="uid://3j8vhcpunrus" path="res://ui/volume_slider.tscn" id="13_q2h1p"]
[ext_resource type="PackedScene" uid="uid://dteoumswrtgwg" path="res://ui/loading_screen.tscn" id="14_0yodx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5yd0i"]
atlas = ExtResource("2_kcjcb")
region = Rect2(0, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_48hco"]
atlas = ExtResource("2_kcjcb")
region = Rect2(1152, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_o4lt6"]
atlas = ExtResource("2_kcjcb")
region = Rect2(2304, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_fntys"]
atlas = ExtResource("2_kcjcb")
region = Rect2(3456, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_n4jwe"]
atlas = ExtResource("2_kcjcb")
region = Rect2(4608, 0, 1152, 648)

[sub_resource type="AtlasTexture" id="AtlasTexture_tnsrv"]
atlas = ExtResource("2_kcjcb")
region = Rect2(5760, 0, 1152, 648)

[sub_resource type="SpriteFrames" id="SpriteFrames_el60y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yd0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_48hco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o4lt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fntys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n4jwe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tnsrv")
}],
"loop": false,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_w426q"]
atlas = ExtResource("9_544ev")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5ert"]
atlas = ExtResource("9_544ev")
region = Rect2(64, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_cmd6h"]
atlas = ExtResource("9_544ev")
region = Rect2(128, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_tu6nb"]
atlas = ExtResource("9_544ev")
region = Rect2(192, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_qmtae"]
atlas = ExtResource("9_544ev")
region = Rect2(256, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_b3o1v"]
atlas = ExtResource("9_544ev")
region = Rect2(320, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3b8y"]
atlas = ExtResource("9_544ev")
region = Rect2(384, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pgcn"]
atlas = ExtResource("9_ueyaj")
region = Rect2(0, 0, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mjl6t"]
atlas = ExtResource("9_ueyaj")
region = Rect2(64, 0, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_i4oeh"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w426q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5ert")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cmd6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tu6nb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qmtae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b3o1v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3b8y")
}],
"loop": false,
"name": &"default",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pgcn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mjl6t")
}],
"loop": true,
"name": &"walk",
"speed": 8.0
}]

[sub_resource type="LabelSettings" id="LabelSettings_p7182"]
font = ExtResource("11_23lmf")
font_size = 20
outline_size = 3
outline_color = Color(0.133333, 0.133333, 0.133333, 1)

[sub_resource type="Theme" id="Theme_5ewyg"]
resource_local_to_scene = true
default_font = ExtResource("12_jtdvs")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lp21q"]
bg_color = Color(0.835294, 0.517647, 0.0823529, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="Theme" id="Theme_ouw1d"]
default_font = ExtResource("12_jtdvs")
default_font_size = 33

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wd76g"]
content_margin_left = 50.0
content_margin_top = 50.0
content_margin_right = 50.0
bg_color = Color(0.286275, 0.635294, 0.87451, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="LabelSettings" id="LabelSettings_i6m1v"]
font_size = 33

[sub_resource type="LabelSettings" id="LabelSettings_7yfm3"]
font_size = 33

[sub_resource type="LabelSettings" id="LabelSettings_au6bo"]
font_size = 33

[sub_resource type="LabelSettings" id="LabelSettings_ugsfo"]
font_size = 33

[node name="main-menu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m6ma2")

[node name="BackgroundAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(640, 364)
scale = Vector2(1.25, 1.25)
sprite_frames = SubResource("SpriteFrames_el60y")
autoplay = "default"

[node name="PlayButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 547.0
offset_top = 456.0
offset_right = 679.0
offset_bottom = 584.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("3_jtrqy")
texture_pressed = ExtResource("4_0bmic")

[node name="SettingButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 489.0
offset_right = 427.0
offset_bottom = 617.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("5_hbg1t")
texture_pressed = ExtResource("6_2tiwg")

[node name="AboutButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 793.0
offset_top = 488.0
offset_right = 921.0
offset_bottom = 616.0
scale = Vector2(1.5, 1.5)
texture_normal = ExtResource("7_2y8fp")
texture_pressed = ExtResource("8_21c1c")

[node name="CharacterAnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(674, 362)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_i4oeh")
autoplay = "default"

[node name="HighScoreLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 514.0
offset_top = 116.0
offset_right = 776.0
offset_bottom = 206.0
label_settings = SubResource("LabelSettings_p7182")
horizontal_alignment = 1
autowrap_mode = 3

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(640, 362)

[node name="AboutPopupPanel" type="PopupPanel" parent="."]
position = Vector2i(301, 80)
size = Vector2i(680, 600)
content_scale_mode = 1
theme = SubResource("Theme_5ewyg")
theme_override_styles/panel = SubResource("StyleBoxFlat_lp21q")

[node name="RichTextLabel" type="RichTextLabel" parent="AboutPopupPanel"]
offset_left = 2.0
offset_top = 2.0
offset_right = 678.0
offset_bottom = 598.0
theme = SubResource("Theme_ouw1d")
text = "
							ABOUT:
	
	Kabugto is a beetle with the power
	of godspeed. In beetle mode, it can
	use super speed. In cocoon mode, 
	it can go underground and pick items 
	under there. Its stamina will be 
	reduced over time. Eating leaves will 
	help it recover.
	
	2023@ God Speed Bug

	Theme song:  Jeremy Blake - Powerup 
	(youtu.be/mrgVpZhjOWk)"
fit_content = true

[node name="SettingPopupPanel" type="PopupPanel" parent="."]
position = Vector2i(301, 80)
size = Vector2i(680, 600)
content_scale_mode = 1
theme = SubResource("Theme_5ewyg")
theme_override_styles/panel = SubResource("StyleBoxFlat_wd76g")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingPopupPanel"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 50.0
offset_top = 50.0
offset_right = 630.0
offset_bottom = 598.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="SettingPopupPanel/VBoxContainer"]
layout_mode = 2
text = "SETTINGS"
label_settings = SubResource("LabelSettings_i6m1v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Master Volume" type="Label" parent="SettingPopupPanel/VBoxContainer"]
layout_mode = 2
text = "Master Volume"
label_settings = SubResource("LabelSettings_7yfm3")

[node name="MasterVolume" parent="SettingPopupPanel/VBoxContainer" instance=ExtResource("13_q2h1p")]
layout_mode = 2
bus_name = "Master"

[node name="Music Volume" type="Label" parent="SettingPopupPanel/VBoxContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_au6bo")

[node name="MusicVolume" parent="SettingPopupPanel/VBoxContainer" instance=ExtResource("13_q2h1p")]
layout_mode = 2
bus_name = "Music"

[node name="SFX Volume" type="Label" parent="SettingPopupPanel/VBoxContainer"]
layout_mode = 2
text = "SFX Volume"
label_settings = SubResource("LabelSettings_ugsfo")

[node name="SFXVolume" parent="SettingPopupPanel/VBoxContainer" instance=ExtResource("13_q2h1p")]
layout_mode = 2
bus_name = "SFX"

[node name="loading_screen" parent="." instance=ExtResource("14_0yodx")]
visible = false

[connection signal="pressed" from="PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="SettingButton" to="." method="_on_setting_button_pressed"]
[connection signal="pressed" from="AboutButton" to="." method="_on_about_button_pressed"]
